fix openapi spec issues and remove card stats from dashboard page
